# lab-01-parser

./: CMakeLists.txt
include/: parser.hpp  student.hpp
sources/: main.cpp  parser.cpp  student.cpp
tests/: incorrect_1.json  student.json  student_1.json
